# cli-menu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build-scripts/: compile.cmd  run.cmd
c++/: .gitignore  CMakeLists.txt  cli-menu.h  command.cpp  command.h  compile.bat  executor.cpp  executor.h  fetch.cmd  main.cpp  message.cpp  message.h  run.bat  util.cpp  util.h
c++/includes/: CMakeLists.txt  base.cpp  base.h  cli-menu.h  color.cpp  color.h  command.cpp  command.h  control.cpp  control.h  dash-test.cpp  dash-test.h  executor.cpp  executor.h  message.cpp  message.h  parameter.cpp  parameter.h  program.cpp  program.h  toggle.cpp  toggle.h  util.h
c++/test/: CMakeLists.txt  _build-clean.cmd  _compile.cmd  _run.cmd  main.cpp
includes/: CMakeLists.txt  base.cpp  base.h  base.hpp  cli-menu.h  cli-menu.hpp  cli_menu.hpp  clipboard.cpp  clipboard.h  clipboard.hpp  clipboard.tpp  color.cpp  color.h  color.hpp  command.cpp  command.h  command.hpp  console.hpp  control.cpp  control.h  control.hpp  dash-test.h  data.hpp  debug.h  language.cpp  language.h  language.hpp  message.cpp  message.h  message.hpp  number.hpp  param-data.cpp  param-data.h  parameter.cpp  parameter.h  parameter.hpp  preset.hpp  program.cpp  program.h  program.hpp  (+9 more)
src/: CMakeLists.txt  base.cpp  clipboard.cpp  color.cpp  command.cpp  console.cpp  control.cpp  data.cpp  data.tpp  language.cpp  message.cpp  number.cpp  parameter.cpp  preset.cpp  printer.cpp  program.cpp  program.tpp  result-inputs.cpp  result.cpp  result.tpp  result_inputs.cpp  toggle.cpp  type.cpp  utils.cpp  word.cpp
test/: CMakeLists.txt  Clipboard-trial.cpp  main.cpp
